--- a/dev/application.properties
+++ b/dev/application.properties
@@ -4,3 +4,4 @@ eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
 eureka.instance.lease-renewal-interval-in-seconds=2 
 #最后一次心跳时间后leaseExpirationDurationInSeconds秒就认为是下线了，默认是90秒
 eureka.instance.lease-expiration-duration-in-seconds=6 
+cot=809615914编辑测试
